# impulse-gui

./: .gitignore  CMakeLists.txt  README.md  build_config.h.in  main.cpp  mainwindow.ui
src/: main.cpp  mainwindow.ui  newuserdialog.cpp  newuserdialog.h  newuserdialog.ui  welcomedialog.cpp  welcomedialog.h  welcomedialog.ui
src/util/: notification.cpp  notification.h
styles/: main.qss
